-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.1, 5.7.0
-
Windows 7
-
ec7fee968f5f1a842b7d2fe670de1d517ecca308
When QT_SCALE_FACTOR is set to something then it will cause the stretch factor on a QFont to be ignored. Works with freetype.
- is duplicated by
-
QTBUG-56522 When using DirectWrite on Windows, text in a font with a stretch other than 100 will not print or export to PDF correctly
-
- Closed
-
-
QTBUG-22652 Setting a horizontal stretch for a font doesn't work with the DirectWrite font engine
-
- Closed
-
- is required for
-
QTBUG-55342 DirectWrite issues
-
- Closed
-
For Gerrit Dashboard: QTBUG-54494 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
164271,2 | Windows QPA: Do not use DirectWrite font engine for stretch != 100 | 5.6 | qt/qtbase | Status: ABANDONED | -2 | 0 |
168308,2 | Support stretch when using DirectWrite font engine | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |