src/plugins/platforms/windows/qwindowsfontenginedirectwrite.cpp
@@ -351,8 +351,9 @@ void QWindowsFontEngineDirectWrite::recalcAdvances(QGlyphLayout *glyphs, QFontEn
                                                               glyphIndices.size(),
                                                               glyphMetrics.data());
     if (SUCCEEDED(hr)) {
+        qreal stretch = fontDef.stretch / 100.0;
         for (int i = 0; i < glyphs->numGlyphs; ++i)
-            glyphs->advances[i] = DESIGN_TO_LOGICAL(glyphMetrics[i].advanceWidth);
+            glyphs->advances[i] = DESIGN_TO_LOGICAL(glyphMetrics[i].advanceWidth * stretch);
         if (fontDef.styleStrategy & QFont::ForceIntegerMetrics) {
             for (int i = 0; i < glyphs->numGlyphs; ++i)
                 glyphs->advances[i] = glyphs->advances[i].round();
@@ -509,7 +510,7 @@ bool QWindowsFontEngineDirectWrite::supportsSubPixelPositions() const
 QImage QWindowsFontEngineDirectWrite::imageForGlyph(glyph_t t,
                                              QFixed subPixelPosition,
                                              int margin,
-                                             const QTransform &xform)
+                                             const QTransform &originalTransform)
 {
     UINT16 glyphIndex = t;
     FLOAT glyphAdvance = 0;
@@ -527,6 +528,10 @@ QImage QWindowsFontEngineDirectWrite::imageForGlyph(glyph_t t,
     glyphRun.isSideways = false;
     glyphRun.bidiLevel = 0;
     glyphRun.glyphOffsets = &glyphOffset;
+
+    QTransform xform = originalTransform;
+    if (fontDef.stretch != 100)
+        xform.scale(fontDef.stretch / 100.0, 1.0);
 
     DWRITE_MATRIX transform;
     transform.dx = subPixelPosition.toReal();
@@ -664,10 +669,15 @@ QString QWindowsFontEngineDirectWrite::fontNameSubstitute(const QString &familyN
 
 glyph_metrics_t QWindowsFontEngineDirectWrite::alphaMapBoundingBox(glyph_t glyph,
                                                                    QFixed subPixelPosition,
-                                                                   const QTransform &matrix,
+                                                                   const QTransform &originalTransform,
                                                                    GlyphFormat format)
 {
     Q_UNUSED(format);
+
+    QTransform matrix = originalTransform;
+    if (fontDef.stretch != 100)
+        matrix.scale(fontDef.stretch / 100.0, 1.0);
+
     glyph_metrics_t bbox = QFontEngine::boundingBox(glyph, matrix); // To get transformed advance
 
     UINT16 glyphIndex = glyph;
